# research-python-evolutionary-algorithms-lcpp

./: README.md  data results.xlsx  pyproject.toml
algorithms/: A-BRKGA-HEURISTICA.py  A-BRKGA.py  BRKGA-HEURISTICA.py  SIMMULATED-ANNEALING.py  results_repository.py  simulated_annealing.sqlite  simulated_annealing_v2.sqlite  simulated_annealing_v3_using_disturbance_temperature.sqlite  simulated_annealing_v4.sqlite  utils.py
algorithms/ejor/packing/: blaz1.txt  blaz2.txt  dighe1.txt  dighe2.txt  fu.txt  instance_01_10pol.txt  instance_01_2pol.txt  instance_01_3pol.txt  instance_01_4pol.txt  instance_01_5pol.txt  instance_01_6pol.txt  instance_01_7pol.txt  instance_01_8pol.txt  instance_01_9pol.txt  rco1.txt  rco2.txt  shapes2.txt  spfc_instance.txt
algorithms/ejor/separated/: blaz1.txt  blaz2.txt  dighe1.txt  dighe2.txt  fu.txt  instance_01_10pol.txt  instance_01_2pol.txt  instance_01_3pol.txt  instance_01_4pol.txt  instance_01_5pol.txt  instance_01_6pol.txt  instance_01_7pol.txt  instance_01_8pol.txt  instance_01_9pol.txt  rco1.txt  rco2.txt  shapes2.txt  spfc_instance.txt
algorithms/models/: coordinate.py  edge.py
results/a-brkga-heuristic/packing/: albano_[0.997].txt  albano_[0.998].txt  albano_[0.999].txt  blaz1_[0.997].txt  blaz1_[0.998].txt  blaz1_[0.999].txt  blaz2_[0.997].txt  blaz2_[0.998].txt  blaz2_[0.999].txt  blaz3_[0.997].txt  blaz3_[0.998].txt  blaz3_[0.999].txt  dighe1_[0.997].txt  dighe1_[0.998].txt  dighe1_[0.999].txt  dighe2_[0.997].txt  dighe2_[0.998].txt  dighe2_[0.999].txt  fu_[0.997].txt  fu_[0.998].txt  fu_[0.999].txt  (+54 more)
(+275 files in other folders)
